[gd_scene load_steps=4 format=3 uid="uid://cklth385cdeia"]

[ext_resource type="Script" uid="uid://cg3e3ow7oqk7m" path="res://src/scene/prefab/ui/file_browser/file_browser_grid_item.gd" id="1_485k5"]
[ext_resource type="Texture2D" uid="uid://ht2wmw2vthd5" path="res://resource/texture/ui/file_browser/empty_file.png" id="1_r8tk7"]
[ext_resource type="StyleBox" uid="uid://cykoehg3qt4v8" path="res://resource/stylebox/item_selected_panel.stylebox" id="3_mldn8"]

[node name="file_browser_grid_item" type="MarginContainer" node_paths=PackedStringArray("icon_rect", "image_icon_rect", "label", "selected_panel")]
clip_contents = true
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("1_485k5")
icon_rect = NodePath("vbox/AspectRatioContainer/icon_rect")
image_icon_rect = NodePath("vbox/AspectRatioContainer/icon_margin/image_icon_rect")
label = NodePath("vbox/label")
selected_panel = NodePath("selected_panel")

[node name="vbox" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="vbox"]
layout_mode = 2
mouse_filter = 2

[node name="icon_rect" type="TextureRect" parent="vbox/AspectRatioContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("1_r8tk7")

[node name="icon_margin" type="MarginContainer" parent="vbox/AspectRatioContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="image_icon_rect" type="TextureRect" parent="vbox/AspectRatioContainer/icon_margin"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_filter = 2
expand_mode = 1

[node name="label" type="RichTextLabel" parent="vbox"]
clip_contents = false
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/bold_italics_font_size = 9
theme_override_font_sizes/italics_font_size = 9
theme_override_font_sizes/mono_font_size = 9
theme_override_font_sizes/normal_font_size = 9
theme_override_font_sizes/bold_font_size = 9
bbcode_enabled = true
text = "example_file.txt"
fit_content = true
scroll_active = false
autowrap_mode = 2

[node name="selected_panel" type="Panel" parent="."]
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("3_mldn8")
